--- a/README
+++ b/README
@@ -14,7 +14,10 @@ TODO:
 	* Profit \o/
 
 Devs:
-	#DrWhax
+	DrWhax
 
 Communication channels:
 irc.smurfnet.ch #mpotr
+
+Blog:
+http://mpotr.tumblr.com
