--- a/README
+++ b/README
@@ -13,5 +13,4 @@ TODO:
 Communication channels:
 irc.oftc.net #otr #otr-dev
 
-Blog:
-http://cryptohub.nl/mpotr.html
+Mailinglist: http://lists.cypherpunks.ca/mailman/listinfo/otr-dev
